# Lab-4_users_and_auth

./: .env.example  .example.env  README.md  Task.md  alembic.ini  config.py  openapi.yaml  pyproject.toml  requir.txt  requirements.txt  test.db  zapusk.md
app/: celery.py  celery_worker.py  main.py  tasks.py
app/api/: __init__.py  router.py  schema.py  src.py
app/authJWT/: __init__.py  _init_.py  utils.py
app/celery/: utils.py  worker.py
app/core/: __init__.py  celery_config.py  db.py  init_db.py  logger.py  security.py  settings.py  utils.py
app/email_task/: email.py  task.py
app/endpoints/: endp.py
app/excel/: __init__.py  _init_.py  base.py  block.py  excel.py  writer.py
app/metrics/: __init__.py  _init_.py  crud.py  router.py
app/models/: __init__.py  endpoints.py  schemas.py  url_map.py  user.py  user_map.py
app/schemas/: url.py  user.py  users.py
app/short/: RandomLink.py  __init__.py  _init_.py  crud.py  router.py  utils.py
app/templates/: 404.html  500.html  base.html  header.html  index_short_url.html
app/url/: __init__.py  src.py
app/users/: __init__.py  _init_.py  confirm.py  crud.py  router.py  utils.py
infra/: Dockerfile  docker-compose.local.yaml  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml
infrastructure/: Dockerfile  docker-compose.local.yaml  docker-compose.yaml
migrations/: env.py
migrations/versions/: 184f2eb199a9_initial_test.py  3ba788d8c3f1_first.py  b3586fa7ed3c_add_user.py  ba1e6bafeb57_redirect_count.py  (+3 more)
reports/: 12345678@mail.ru_2024-05-14.xlsx  12345679@mail.ru_2024-05-14.xlsx
(+7 files in other folders)
