[tool.poetry]
name = "lab-3-url-shorts"
version = "0.1.0"
description = ""
authors = ["Kapkaev Andrey <kapkaew@yandex.ru>"]
readme = "README.md"

[tool.black]
line-length = 120
paths = [
  "./app/",
  "./alembic/",
]
exclude = """
  ^/ci
  | ^/tmp
  | ^/venv
  | ^/.venv
  | ^/.env
"""

[tool.isort]
profile = "black"
line_length = 120
skip = [
  "./ci",
  "./tmp",
  "./venv",
  "./.env",
  "./.venv"
]

[tool.pytest.ini_options]
addopts = "--color=yes -p no:cacheprovider"
console_output_style = "progress"
asyncio_mode= "auto"
testpaths = [
  "./tests/"
]
python_files = [
  "test_*.py",
  "tests.py",
  "*_test.py"
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
jinja2 = "^3.1.3"
alembic = "^1.13.1"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"
python-dotenv = "^1.0.1"
pytest = "^8.1.1"
sqlalchemy-utils = "^0.41.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest-cov = "^4.1.0"
black = "^24.2.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
faker = "^23.2.1"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
